Quick update for qwen

--- a/candle-transformers/Cargo.toml
+++ b/candle-transformers/Cargo.toml
@@ -27,6 +27,8 @@ tracing = { workspace = true }
 
 [features]
 default = []
+# Expose internal types for external K/V cache management
+internal = []
 accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate"]
 cuda = ["candle/cuda", "candle-nn/cuda"]
 cudnn = ["candle/cudnn", "candle-nn/cudnn"]
